objects/Teacher__c.object
<CustomObject>
    <fields>
        <fullName>Appointment_Availability_Start_Time__c</fullName>
        <description>Time from which the professor is available to take appointments</description>
        <label>Appointment Availability Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Appointment_availability_Days__c</fullName>
        <label>Appointment availability Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mon</fullName>
                </value>
                <value>
                    <fullName>Tue</fullName>
                </value>
                <value>
                    <fullName>Wed</fullName>
                </value>
                <value>
                    <fullName>Thu</fullName>
                </value>
                <value>
                    <fullName>Fri</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appointment_availability_End_Time__c</fullName>
        <description>Time till which the professor can take appointments</description>
        <label>Appointment availability End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Teachers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Teacher</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Teacher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teachers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>